# proto

./: .gitignore  KBWasmWrapper.js  KBcache.js  KBmanifest.js  KBstorage.js  test.js
BrowserScript/: KBcache.js  KBstorage.js  KBwasm.js
BrowserScript/Custom/: KBcache.js  KBstorage.js  KBwasm.js  index.html
Data/: concat_text.wasm
Data/Manifests/: 5994471ABB01112AFCC18159F6CC74B4F511B99806DA59B3CAF5A9C173CACFC5.json  63640264849A87C90356129D99EA165E37AA5FABC1FEA46906DF1A7CA50DB492.json  A665A45920422F9D417E4867EFDC4FB8A04A1F3FFF1FA07E998E86F7F7A27AE3.json  DB2E7F1BD5AB9968AE76199B7CC74795CA7404D5A08D78567715CE532F9D2669.json  E3DAEA56B34112448147D0081E195E4EE8BCFA79F1D6863925F9742BEC1D9BC0.json  manifest example.json
Data/Matches/: data.json
Scripts/Browser/: KBcache.js  KBstorage.js  KBwasm.js  index.html
Scripts/Node/: Cache.js  Common.js  Engine.js  KBcache.js  KBstorage.js  KBwasm.js  Manifest.js  Network.js  Server.js  Wasm.js  test.js
Server/: KBserver.js  data chunks.json  db.json  manifests.json  server.js
Server/files/: buffers_concat.wasm  concat.wasm  file3.txt  hashcalculator.wasm  huffman2.wasm  huffman2.wasm.br  huffman2.wasm.zst  lowercase.wasm  pdf2html.js  pdf2html.js.br  (+10 more)
WasmSrc/: common.js
WasmSrc/CabBuilder/: Cargo.toml  build.sh
WasmSrc/CabBuilder/src/: lib.rs  test.js
WasmSrc/HashCalculator/: Cargo.toml  build.sh
WasmSrc/HashCalculator/src/: lib.rs  test.js
WasmSrc/StrReverse/: Cargo.toml  build.sh
WasmSrc/StrReverse/src/: lib.rs  test.js
WasmSrc/UnBrotli/: Cargo.toml  build.sh
WasmSrc/UnBrotli/src/: lib.rs  test.js
(+306 files in other folders)
