[package]
name = "hashcalculator"
version = "0.1.0"
authors = ["Mikhail Ignatovich <mikka_rus@yahoo.com>"]
description = "SHA2 calculator"
license = "MIT/Apache-2.0"
repository = "https://github.com/kolmoblocks/proto"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.2.0"
sha2 = "0.8.0"